--- a/homework/tsconfig.json
+++ b/homework/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.config.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "jest.config.js", "src/components/feature/auth/LoginForm/LoginForm.test.tsx"],
   "exclude": ["node_modules"]
 }
