--- a/homework/package.json
+++ b/homework/package.json
@@ -15,22 +15,31 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "babel": "^6.23.0",
     "framer-motion": "^11.2.13",
-    "next": "^14.2.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
+    "@babel/core": "^7.24.9",
+    "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "eslint-plugin-react": "^7.28.0",
+    "globals": "^15.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.16.0"
   }
 }
