--- a/homework/package.json
+++ b/homework/package.json
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
